fixed backspace not working, changed the display element from input to a div

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
              <div class="settings-Icon"><i class="fa-solid fa-ellipsis-vertical"></i></div>
           </div>
 
-          <input class="inputOne fs-4" type="text" id="expression-display" disable>
-          <input class="inputTwo fs-1 text-primary" type="text" id="calculated-display" disable>
+          <input class="inputOne fs-4" type="text" id="expression-display" disabled>
+          <div class="inputTwo fs-1 text-primary" id="calculated-display"></div>
           <button type="button" class="btn btn-secondary fw-bolder fs-5 d-flex align-items-center justify-content-center text-success" onclick="clearDisplay()">AC</button>
           <button type="button" class="btn btn-secondary fw-bolder fs-5 text-success"><i class="fa-solid fa-plus-minus"></i></button>
           <button type="button" class="btn btn-secondary fw-bolder fs-5 text-success" onclick="appendToDisplay('%')"><i class="fa-solid fa-percent"></i></button>
