Fixed some minor bugs

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
              <div class="settings-Icon"><i class="fa-solid fa-ellipsis-vertical"></i></div>
           </div>
 
-          <input class="inputOne fs-4" type="text" id="expression-display" disabled>
+          <input class="inputOne fs-4" type="text" id="expression-display" disable>
           <div class="inputTwo fs-1 text-primary" id="calculated-display"></div>
           <button type="button" class="btn btn-secondary fw-bolder fs-5 d-flex align-items-center justify-content-center text-success" onclick="clearDisplay()">AC</button>
           <button type="button" class="btn btn-secondary fw-bolder fs-5 text-success"><i class="fa-solid fa-plus-minus"></i></button>
           <button type="button" class="btn btn-secondary fw-bolder fs-5 text-success" onclick="appendToDisplay('%')"><i class="fa-solid fa-percent"></i></button>
-          <button type="button" class="btn btn-secondary fw-bolder fs-5 text-primary" onclick="appendToDisplay('/')"><i class="fa-solid fa-divide"></i></button>
+          <button type="button" class="btn btn-secondary fw-bolder fs-5 text-primary" onclick="appendToDisplay('÷')"><i class="fa-solid fa-divide"></i></button>
           
           <button type="button" class="btn btn-secondary num fw-bolder fs-5 text-dark" onclick="appendToDisplay('7')">7</button>
           <button type="button" class="btn btn-secondary num fw-bolder fs-5 text-dark" onclick="appendToDisplay('8')">8</button>
           <button type="button" class="btn btn-secondary num fw-bolder fs-5 text-dark" onclick="appendToDisplay('9')">9</button>
-          <button type="button" class="btn btn-secondary fw-bolder fs-5 text-primary" onclick="appendToDisplay('*')"><i class="fa-solid fa-xmark"></i></button>
+          <button type="button" class="btn btn-secondary fw-bolder fs-5 text-primary" onclick="appendToDisplay('×')"><i class="fa-solid fa-xmark"></i></button>
           
           <button type="button" class="btn btn-secondary num fw-bolder fs-5 text-dark" onclick="appendToDisplay('4')">4</button>
           <button type="button" class="btn btn-secondary num fw-bolder fs-5 text-dark" onclick="appendToDisplay('5')">5</button>
